2006-08-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/PostScript/ps_header.sh: Force always the same sorting.

	* term/post.trm term/PostScript/prologue.ps: Move "Blacktext {} if" into
	the definitions of {M}{LCR}show, to avoid it directly in the postscript
	body.

2006-08-01  Ethan A Merritt <merritt@u.washington.edu>

	* src/datafile.c (df_readascii): Allow a string-valued function
	to provide the time/date string for interpreting axis coordinates
	given after 'set {xyz}data time'.
	Bug #1445586

2006-07-31  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* README.1ST: Update notes on the gd library.

2006-07-31  Ethan A Merritt <merritt@u.washington.edu>

	* term/gd.trm (PNG_linetype): Fix off-by-one error in checking for
	minimum legal linetype. Could conceivably have caused a segfault.

	* demo/rectangle.dem demo/html/index.save: Update demo for 4.2

2006-07-30  Ethan A Merritt <merritt@u.washington.edu>

	* docs/gnuplot.doc (Known Bugs): The 'nohidden3d' options does
	not work for parametric curves. Bug #1531432.

2006-07-30  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to recent changes in English files.

2006-07-30  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* term/post.trm: Reword the doc about the prologue files, so that we do
	not need the #ifdef GNUPLOT_PS_DIR, and so that the use of the
	environment variable GNUPLOT_PS_DIR is always documented since it is
	always available.

2006-07-30  Daniel Sebald <daniel.sebald@ieee.org>

	* docs/gnuplot.doc: Format norm()/invnorm() info for 80 characters.

2006-07-29  Ethan A Merritt <merritt@u.washington.edu>

	* configure.in: Remove warning about needing a patch for libreadline
	(not relevant to libreadline version 5).

	* docs/gnuplot.texi: Update to match current documentation.

2006-07-29  James R. Van Zandt  <jrv@vanzandt.comcast.net>

	* docs/gnuplot.doc: clarify definitions of functions norm() and igamma()
