@@ -1,50 +1,6 @@
 /* This script-generated file contains the PostScript prologues
  * in a form suitable to inclusion in a C source code */
 
-static const char *prologue_8859_15_ps[] = {
-"/reencodeISO15 {\n",
-"dup dup findfont dup length dict begin\n",
-"{ 1 index /FID ne { def }{ pop pop } ifelse } forall\n",
-"currentdict /CharStrings known {\n",
-"\tCharStrings /Idieresis known {\n",
-"\t\t/Encoding ISOLatin15Encoding def } if\n",
-"} if\n",
-"currentdict end definefont\n",
-"} def\n",
-"/ISOLatin15Encoding [\n",
-"/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef\n",
-"/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef\n",
-"/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef\n",
-"/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef\n",
-"/space/exclam/quotedbl/numbersign/dollar/percent/ampersand/quoteright\n",
-"/parenleft/parenright/asterisk/plus/comma/minus/period/slash\n",
-"/zero/one/two/three/four/five/six/seven/eight/nine/colon/semicolon\n",
-"/less/equal/greater/question/at/A/B/C/D/E/F/G/H/I/J/K/L/M/N\n",
-"/O/P/Q/R/S/T/U/V/W/X/Y/Z/bracketleft/backslash/bracketright\n",
-"/asciicircum/underscore/quoteleft/a/b/c/d/e/f/g/h/i/j/k/l/m\n",
-"/n/o/p/q/r/s/t/u/v/w/x/y/z/braceleft/bar/braceright/asciitilde\n",
-"/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef\n",
-"/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef\n",
-"/.notdef/dotlessi/grave/acute/circumflex/tilde/macron/breve\n",
-"/dotaccent/dieresis/.notdef/ring/cedilla/.notdef/hungarumlaut\n",
-"/ogonek/caron/space/exclamdown/cent/sterling/Euro/yen/Scaron\n",
-"/section/scaron/copyright/ordfeminine/guillemotleft/logicalnot\n",
-"/hyphen/registered/macron/degree/plusminus/twosuperior/threesuperior\n",
-"/Zcaron/mu/paragraph/periodcentered/zcaron/onesuperior/ordmasculine\n",
-"/guillemotright/OE/oe/Ydieresis/questiondown\n",
-"/Agrave/Aacute/Acircumflex/Atilde/Adieresis/Aring/AE/Ccedilla\n",
-"/Egrave/Eacute/Ecircumflex/Edieresis/Igrave/Iacute/Icircumflex\n",
-"/Idieresis/Eth/Ntilde/Ograve/Oacute/Ocircumflex/Otilde/Odieresis\n",
-"/multiply/Oslash/Ugrave/Uacute/Ucircumflex/Udieresis/Yacute\n",
-"/Thorn/germandbls/agrave/aacute/acircumflex/atilde/adieresis\n",
-"/aring/ae/ccedilla/egrave/eacute/ecircumflex/edieresis/igrave\n",
-"/iacute/icircumflex/idieresis/eth/ntilde/ograve/oacute/ocircumflex\n",
-"/otilde/odieresis/divide/oslash/ugrave/uacute/ucircumflex/udieresis\n",
-"/yacute/thorn/ydieresis\n",
-"] def\n",
-NULL
-};
-
 static const char *prologue_8859_1_ps[] = {
 "/reencodeISO {\n",
 "dup dup findfont dup length dict begin\n",
@@ -76,6 +32,50 @@ static const char *prologue_8859_1_ps[] = {
 "/hyphen/registered/macron/degree/plusminus/twosuperior/threesuperior\n",
 "/acute/mu/paragraph/periodcentered/cedilla/onesuperior/ordmasculine\n",
 "/guillemotright/onequarter/onehalf/threequarters/questiondown\n",
+"/Agrave/Aacute/Acircumflex/Atilde/Adieresis/Aring/AE/Ccedilla\n",
+"/Egrave/Eacute/Ecircumflex/Edieresis/Igrave/Iacute/Icircumflex\n",
+"/Idieresis/Eth/Ntilde/Ograve/Oacute/Ocircumflex/Otilde/Odieresis\n",
+"/multiply/Oslash/Ugrave/Uacute/Ucircumflex/Udieresis/Yacute\n",
+"/Thorn/germandbls/agrave/aacute/acircumflex/atilde/adieresis\n",
+"/aring/ae/ccedilla/egrave/eacute/ecircumflex/edieresis/igrave\n",
+"/iacute/icircumflex/idieresis/eth/ntilde/ograve/oacute/ocircumflex\n",
+"/otilde/odieresis/divide/oslash/ugrave/uacute/ucircumflex/udieresis\n",
+"/yacute/thorn/ydieresis\n",
+"] def\n",
+NULL
+};
+
+static const char *prologue_8859_15_ps[] = {
+"/reencodeISO15 {\n",
+"dup dup findfont dup length dict begin\n",
+"{ 1 index /FID ne { def }{ pop pop } ifelse } forall\n",
+"currentdict /CharStrings known {\n",
+"\tCharStrings /Idieresis known {\n",
+"\t\t/Encoding ISOLatin15Encoding def } if\n",
+"} if\n",
+"currentdict end definefont\n",
+"} def\n",
+"/ISOLatin15Encoding [\n",
+"/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef\n",
+"/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef\n",
+"/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef\n",
+"/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef\n",
+"/space/exclam/quotedbl/numbersign/dollar/percent/ampersand/quoteright\n",
+"/parenleft/parenright/asterisk/plus/comma/minus/period/slash\n",
+"/zero/one/two/three/four/five/six/seven/eight/nine/colon/semicolon\n",
+"/less/equal/greater/question/at/A/B/C/D/E/F/G/H/I/J/K/L/M/N\n",
+"/O/P/Q/R/S/T/U/V/W/X/Y/Z/bracketleft/backslash/bracketright\n",
+"/asciicircum/underscore/quoteleft/a/b/c/d/e/f/g/h/i/j/k/l/m\n",
+"/n/o/p/q/r/s/t/u/v/w/x/y/z/braceleft/bar/braceright/asciitilde\n",
+"/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef\n",
+"/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef\n",
+"/.notdef/dotlessi/grave/acute/circumflex/tilde/macron/breve\n",
+"/dotaccent/dieresis/.notdef/ring/cedilla/.notdef/hungarumlaut\n",
+"/ogonek/caron/space/exclamdown/cent/sterling/Euro/yen/Scaron\n",
+"/section/scaron/copyright/ordfeminine/guillemotleft/logicalnot\n",
+"/hyphen/registered/macron/degree/plusminus/twosuperior/threesuperior\n",
+"/Zcaron/mu/paragraph/periodcentered/zcaron/onesuperior/ordmasculine\n",
+"/guillemotright/OE/oe/Ydieresis/questiondown\n",
 "/Agrave/Aacute/Acircumflex/Atilde/Adieresis/Aring/AE/Ccedilla\n",
 "/Egrave/Eacute/Ecircumflex/Edieresis/Igrave/Iacute/Icircumflex\n",
 "/Idieresis/Eth/Ntilde/Ograve/Oacute/Ocircumflex/Otilde/Odieresis\n",
@@ -439,12 +439,12 @@ static const char *prologue_prologue_ps[] = {
 "/f {rlineto fill} bind def\n",
 "/vpt2 vpt 2 mul def\n",
 "/hpt2 hpt 2 mul def\n",
-"/Lshow { currentpoint stroke M\n",
-"  0 vshift R show } def\n",
-"/Rshow { currentpoint stroke M\n",
-"  dup stringwidth pop neg vshift R show } def\n",
-"/Cshow { currentpoint stroke M\n",
-"  dup stringwidth pop -2 div vshift R show } def\n",
+"/Lshow { currentpoint stroke M 0 vshift R \n",
+"\tBlacktext {gsave 0 setgray show grestore} {show} ifelse } def\n",
+"/Rshow { currentpoint stroke M dup stringwidth pop neg vshift R\n",
+"\tBlacktext {gsave 0 setgray show grestore} {show} ifelse } def\n",
+"/Cshow { currentpoint stroke M dup stringwidth pop -2 div vshift R \n",
+"\tBlacktext {gsave 0 setgray show grestore} {show} ifelse } def\n",
 "/UP { dup vpt_ mul /vpt exch def hpt_ mul /hpt exch def\n",
 "  /hpt2 hpt 2 mul def /vpt2 vpt 2 mul def } def\n",
 "/DL { Color {setrgbcolor Solid {pop []} if 0 setdash }\n",
